    FIXED: Wrong Danish language code (dk.po->da.po)


1.50-beta1
======================
    ADDED: if view is human-readable, status bar is normal (bytes) and vice
           versa
    ADDED: Human-readable file sizes is implemented
           (located in look&feel->panel)
    ADDED: useraction: available via rightclick-menu
    ADDED: importing the right click menu of konqueror
    ADDED: cut(CTRL+X), copy(CTRL+C), paste(CTRL+V)
    ADDED: useraction: new Placeholder %_Profile("panel-profile")%
    ADDED: useraction: new Placeholder %_NewSearch("search-profile")%
    ADDED: useraction: run as different user
    ADDED: alt-O now sync the panels (like ctrl-left/right arrows)
    ADDED: new shortcut (ctrl-d) to open bookmarks on current panel
    ADDED: panel costum colors: new Current Marked Foreground
    ADDED: compare by content: the action is now smarter in finding the right
           files
    ADDED: profiles for the panels
    ADDED: mkdir (F7) can now create whole trees on the fly ("foo/bar/test")
    ADDED: synchronizer uses the search filters
    ADDED: search profiles
    ADDED: searcher: TC like search ( 'text' == '*text*' )
           excluding files with '|' (ex. '*.cpp *.h | *.moc.cpp' )
    ADDED: search on remote file systems
    ADDED: konfigurator|advanced has a new entry: just enter mountpoints 
           there, and mountman won't try to mount/unmount them.
    ADDED: mountman got a big nose-job ;-) plz test
    ADDED: dropping on the tree panel (copy,move,link)
    ADDED: packing / unpacking to/from remote URL-s
    ADDED: short tab names
    ADDED: compare directories (mark menu)
    ADDED: shift+left/right changes tabs (thanks to Dmitry Suzdalev)
    ADDED: linking mimes and protocols
    ADDED: new delete dialog box: lists the file names to be deleted
           (thanks to dirk for the idea)
    ADDED: iso protocol for viewing .iso cd/dvd images
           (thanks to Szombathelyi Gyorgy)
    ADDED: full handling of arj, ace and lha packers