@@ -1,3 +1,4 @@
+    FIXED: Krusader overloads the CPU with panel refreshing
     FIXED: Wrong Danish language code (dk.po->da.po)
 
 
